A2 HTML Version 0.2: add edit-profile

--- a/public/tuiter/tuit.html
+++ b/public/tuiter/tuit.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <a href="navigation.html">Back</a>
+
 <h1>Tuiter</h1>
 <h2>Tuit</h2>
 <image src="account_image.jpg" width="48px" height="48px"/><br/>
@@ -16,9 +17,9 @@
     <option value="MENTIONED">Only people you mention</option>
 </select>
 <hr/>
-<button>Choose file</button>
+<button type="button">Choose file</button>
 No file chosen
-<button>Tuit</button>
+<button type="button" style="margin-left: 100px">Tuit</button>
 <hr/>
 </body>
 </html>
