--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <a href="navigation.html">Back</a>
+
 <h1>Tuiter</h1>
 <h2>Home</h2>
 <image src="account_image.jpg" width="48px" height="48px"/>
@@ -18,9 +19,9 @@
     <option value="MENTIONED">Only people you mention</option>
 </select>
 <hr/>
-<button>Choose file</button>
+<button type="button">Choose file</button>
 No file chosen
-<button>Tuit</button>
+<button type="button" style="margin-left: 100px">Tuit</button>
 <hr/>
 
 <ul>
@@ -36,16 +37,16 @@ No file chosen
             of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
             Aldus PageMaker including versions of Lorem Ipsum.
         </p>
-        <a href="reply.html">Reply</a>123 |
-        <a href="retuit.html">Retuit</a>234 |
-        <a href="like.html">Like</a>345 |
+        <a href="reply.html">Reply</a> 123 |
+        <a href="retuit.html">Retuit</a> 234 |
+        <a href="like.html">Like</a> 345 |
         <a href="share.html">Share</a>
     </li>
     </br>
     <li>
         <a href="topic.html">Topic 234</a></br>
         <image src="account_image.jpg" width="48px" height="48px"/>
-        <a href="profile.html">Bob</a>@bob - 4h
+        <a href="profile.html">Jingting</a>@jingting - 4h
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
             industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
@@ -54,9 +55,9 @@ No file chosen
             of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
             Aldus PageMaker including versions of Lorem Ipsum.
         </p>
-        <a href="reply.html">Reply</a>123 |
-        <a href="retuit.html">Retuit</a>234 |
-        <a href="like.html">Like</a>345 |
+        <a href="reply.html">Reply</a> 123 |
+        <a href="retuit.html">Retuit</a> 234 |
+        <a href="like.html">Like</a> 345 |
         <a href="share.html">Share</a>
     </li>
 </ul>
