--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -5,21 +5,29 @@
     <title>Profile</title>
 </head>
 <body>
-    <a href="navigation.html">Back</a>
-    <h1>Tuiter</h1>
-    <h2>Edit Profile</h2>
-    <a href="profile.html">Save</a>
-    <image src="../public/labs/a2/teslabot.jpg" style="width:100%;" height="200px"/>
-    <button>Choose File</button>header.jpg<br/>
-    <image src="account_image.jpg" width="48px" height="48px"/><br/>
-    <button>Choose File</button>No file chosen
-    <br/>
-    <hr/>
-    <label>Name</label>
-    <input type="text" placeholder="Name" value="webdev"/>
-    <hr/>
-    <label>Bio</label><br/>
-    <textarea cols="50" rows="10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </textarea>
+<a href="navigation.html">Back</a>
+<h1>Tuiter</h1>
+<h2>Edit Profile</h2>
+<a href="profile.html">Save</a>
+<image src="../labs/a2/teslabot.jpg" style="width:100%;" height="200px"></image>
+<image src="account_image.jpg" width="48px" height="48px"></image>
+<a href="edit-profile.html">Edit Profile</a>
+
+<h2>WebDev</h2>
+<label>@WebDev</label>
+<p>
+    Lego, AI and Space enthusiast, Web Polymath, used to hate Salsa and Meringue, but now desperately learning to play
+    and dance
+</p>
+<p>
+    Joined August 2021
+</p>
+<p>
+    <b>123</b> Following <b>234</b> Followers
+</p>
+<a href="tuit.html">Tuits</a><br/>
+<a href="tuits-and-replies.html">Tuits & Replies</a><br/>
+<a href="media.html">Media</a><br/>
+<a href="likes.html">Likes</a><br/>
 </body>
 </html>
