A2 HTML Version 0.4: resolve warnings

--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -7,7 +7,7 @@
 <body>
 <a href="navigation.html">Back</a>
 <h1>Tuiter</h1>
-<h2>Edit Profile</h2>
+<h2>Profile</h2>
 <a href="profile.html">Save</a>
 <image src="../labs/a2/teslabot.jpg" style="width:100%;" height="200px"></image>
 <image src="account_image.jpg" width="48px" height="48px"></image>
