--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -9,10 +9,13 @@
 
 <h1>Tuiter</h1>
 <h2>Home</h2>
-<image src="account_image.jpg" width="48px" height="48px"/>
+<image src="account_image.jpg" width="48px" height="48px"></image>
 <br/>
-<textarea placeholder="What's happening?"></textarea>
+<label>
+    <textarea placeholder="What's happening?"></textarea>
+</label>
 <br/>
+<label for="select-one-genre"></label>
 <select id="select-one-genre">
     <option selected value="EVERYONE"> Everyone can reply</option>
     <option value="FOLLOWING">People you follow</option>
@@ -26,8 +29,8 @@ No file chosen
 
 <ul>
     <li>
-        <a href="topic.html">Topic 123</a></br>
-        <image src="account_image.jpg" width="48px" height="48px"/>
+        <a href="topic.html">Topic 123</a><br/>
+        <image src="account_image.jpg" width="48px" height="48px"></image>
         <a href="profile.html">Jingting</a>@jingting - 2h
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -41,11 +44,10 @@ No file chosen
         <a href="retuit.html">Retuit</a> 234 |
         <a href="like.html">Like</a> 345 |
         <a href="share.html">Share</a>
-    </li>
-    </br>
+    </li><br/>
     <li>
-        <a href="topic.html">Topic 234</a></br>
-        <image src="account_image.jpg" width="48px" height="48px"/>
+        <a href="topic.html">Topic 234</a><br/>
+        <image src="account_image.jpg" width="48px" height="48px"></image>
         <a href="profile.html">Jingting</a>@jingting - 4h
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
