--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -5,6 +5,7 @@
     <title>Navigation</title>
 </head>
 <body>
+<a href="../index.html">Back</a>
 <table border="1" width="100%">
   <thead>
   <tr>
