A3 CSS Version 0.4: complete explore and bookmark pages

--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -8,17 +8,18 @@
 <body>
 <div class="wd-padding-left">
     <!--    A-->
-    <div class="wd-search-container">
-        <div>
-            <label>
-                <input type="text" placeholder="Search Tuiter"/>
-            </label>
-            <div class="wd-search-icon">
-                &#128269
+    <div class="wd-top">
+        <div class="wd-container-search">
+            <div>
+                <label>
+                    <input type="text" placeholder="Search Tuiter"/>
+                </label>
+                <div class="wd-search-icon">
+                    &#128269;
+                </div>
             </div>
         </div>
-        <a href="explore-settings.html" class="wd-gear">&#9881;
-        </a>
+        <a href="explore-settings.html" class="wd-gear">&#9881;</a>
     </div>
 
     <!--    B-->
@@ -33,10 +34,10 @@
 
     <!--    C1-->
     <div class="wd-container-post-c">
-        <div class="wd-treading">
+        <div class="wd-trending">
             <div class="wd-container-post-topic">Trending in Science</div>
             <div class="wd-margin-right-post-c">
-                <a href="" class="wd-href-no-decoration">&#8230</a>
+                <a href="" class="wd-href">&#8230;</a>
             </div>
         </div>
         <div class="wd-container-post-title">Starship</div>
@@ -45,10 +46,10 @@
 
     <!--    C2-->
     <div class="wd-container-post-c">
-        <div class="wd-treading">
+        <div class="wd-trending">
             <div class="wd-container-post-topic">Sports · Trending</div>
             <div class="wd-margin-right-post-c">
-                <a href="" class="wd-href-no-decoration">&#8230</a>
+                <a href="" class="wd-href">&#8230;</a>
             </div>
         </div>
         <div class="wd-container-post-title">Joe Rogan</div>
@@ -59,9 +60,9 @@
     <div class="wd-container-post-de">
         <div class="wd-container-de-content">
             <div class="wd-container-post-organization">
+                <div class="wd-org-icon">&#64;</div>
                 <div class="wd-container-post-org">The New York Times</div>
-                <
-                <div class="wd-org-icon">
+                <div class="wd-org-verified">
                     &#10003;
                 </div>
                 <!--                    <img class="wd-org-icon" src="../icons/verified.png" width="13px" height="13px"/>-->
@@ -74,7 +75,7 @@
              src="https://images.unsplash.com/photo-1674953602080-145306f7d5a6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1674&q=80"/>
     </div>
 
-    <!--    E-->
+    <!--    E1-->
     <div class="wd-container-post-de">
         <div class="wd-container-de-content">
             <div class="wd-container-post-info-organization">
@@ -86,14 +87,25 @@
              src="https://images.unsplash.com/photo-1674473803147-fe59fb8883fe?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1072&q=80"/>
     </div>
 
+    <!--    E2-->
+    <div class="wd-container-post-de">
+        <div class="wd-container-de-content">
+            <div class="wd-container-post-info-organization">
+                <div class="wd-container-post-topic">Entertainment</div>
+            </div>
+            <div class="wd-container-post-title">The standard Lorem Ipsum passage, used since the 1500s</div>
+        </div>
+        <img class="wd-post-de-img"
+             src="https://plus.unsplash.com/premium_photo-1672378000400-f990543fa9ab?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=812&q=80"/>
+    </div>
+
     <!--    D2-->
     <div class="wd-container-post-de">
         <div class="wd-container-de-content">
             <div class="wd-container-post-organization">
+                <div class="wd-org-icon">&#64;</div>
                 <div class="wd-container-post-org">Bloomberg Opinion</div>
-                <div class="wd-org-icon">
-                    &#10003;
-                </div>
+                <div class="wd-org-verified">&#10003;</div>
                 <div class="wd-container-post-topic"> · Yesterday</div>
             </div>
             <div class="wd-container-post-title">Thinking about getting a booster? Read this first.</div>
@@ -104,18 +116,15 @@
 
     <!--    C3-->
     <div class="wd-container-post-c">
-        <div class="wd-treading">
-            <div class="wd-container-post-info-organization">
-                <div class="wd-container-post-topic">Trending in United States</div>
-            </div>
+        <div class="wd-trending">
+            <div class="wd-container-post-topic">Trending in United States</div>
             <div class="wd-margin-right-post-c">
-                <a href="" class="wd-href-no-decoration">&#8230</a>
+                <a href="" class="wd-href">&#8230;</a>
             </div>
         </div>
         <div class="wd-container-post-title">Wonder Bread</div>
         <div class="wd-container-post-amount">1,259 Tweets</div>
     </div>
-
 
 </div>
 
