--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -6,7 +6,7 @@
     <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
-<div class="wd-container">
+<div class="wd-container-top">
     <div class="wd-title">Bookmarks</div>
     <div class="wd-user">@WebDev</div>
 </div>
@@ -29,20 +29,17 @@
                  src="https://images.unsplash.com/photo-1671404668663-4a18735394ef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"/>>
         </div>
         <div class="wd-post-link-content">
-            <div class="wd-post-title">Lorem Ipsum is simply dummy text of the printing and typesetting industry</div>
+            <div class="wd-post-title">Lorem Ipsum is simply dummy text of the printing and ...</div>
             <div class="wd-post-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                 Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
-                the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-                desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                galley of type and scrambled it to make a type specimen book.
+                <div>&#128279; https://www.lipsum.com/</div>
             </div>
         </div>
-
         <div class="wd-post-icon-row">
             <div class="wd-post-icon-col">
                 <div class="wd-post-icon-img">
-                    <a href="#comment" class="wd-url">&#9998</a>
+                    <a href="#comment" class="wd-url">&#9998;</a>
                 </div>
                 <div class="wd-post-icon-number">22</div>
             </div>
@@ -68,5 +65,57 @@
     </div>
 </div>
 
+<div class="wd-container-post">
+    <img class="wd-avatar" src="../account_image.jpg"/>
+    <div class="wd-post">
+        <div class="wd-post-user-info">
+            <div class="wd-author">Jingting</div>
+            <div class="wd-username">@jingting · Jul 20</div>
+        </div>
+        <div class="wd-post-content">It has survived not only five centuries, but
+            also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+            with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+            publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </div>
+        <div class="wd-post-img-container">
+            <img class="wd-post-img"
+                 src="https://images.unsplash.com/photo-1675155132562-9edd55028f3b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1856&q=80"/>>
+        </div>
+        <div class="wd-post-link-content">
+            <div class="wd-post-title">Lorem Ipsum is simply dummy text of the printing and ...</div>
+            <div class="wd-post-text">It was popularised in
+                the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+                desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                <div>&#128279; https://www.lipsum.com/</div>
+            </div>
+        </div>
+        <div class="wd-post-icon-row">
+            <div class="wd-post-icon-col">
+                <div class="wd-post-icon-img">
+                    <a href="#comment" class="wd-url">&#9998;</a>
+                </div>
+                <div class="wd-post-icon-number">22</div>
+            </div>
+            <div class="wd-post-icon-col">
+                <div class="wd-post-icon-img">
+                    <a href="#forward" class="wd-url">&#8631;</a>
+                </div>
+                <div class="wd-post-icon-number">20</div>
+            </div>
+            <div class="wd-post-icon-col">
+                <div class="wd-post-icon-img">
+                    <a href="#like" class="wd-url">&#9829;</a>
+                </div>
+                <div class="wd-post-icon-number">50</div>
+            </div>
+            <div class="wd-post-icon-col">
+                <div class="wd-post-icon-img">
+                    <a href="#share" class="wd-url">&#8657;</a>
+                </div>
+                <div class="wd-post-icon-number"></div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
