--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -139,9 +139,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="index.css" rel="stylesheet">
-    <!--    <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet"/>-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-          rel="stylesheet"/>
+    <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container mt-2">
@@ -367,8 +365,8 @@
                         </div>
                         <div class="col-2">
                             <button class="btn btn-primary rounded-pill float-end align-middle">Follow</button>
-                            </div>
                         </div>
+                    </div>
                 </li>
                 <li class="list-group-item">
                     <div class="row align-items-center">
