A4 Bootstrap v0.4: challenge fix

--- a/public/tuiter/explore/index-challenge.html
+++ b/public/tuiter/explore/index-challenge.html
@@ -13,8 +13,8 @@
     <div class="row">
         <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-2 col-xxl-2">
             <div class="list-group">
-                <a href="#Tuiter" class="list-group-item wd-list-group-item list-group-item-action">
-                    <i class="fa-soild fa-t nv-link"></i>
+                <a href="#Home" class="list-group-item wd-list-group-item list-group-item-action">
+                    <div class="text-primary">T</div>
                 </a>
                 <a href="#Home" class="list-group-item wd-list-group-item list-group-item-action">
                     <div class="row">
@@ -23,12 +23,12 @@
                         <div class="d-none d-xl-block col-xl-10 col-xxl-10">Home</div>
                     </div>
                 </a>
-                <a href="#Explore" class="list-group-item wd-list-group-item list-group-item-action">
+                <a href="#Explore" class="list-group-item wd-list-group-item list-group-item-action ">
                     <div class="row">
                         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-2 col-xxl-2">
                             <i class="fa fa-hashtag fa-1x"></i>
                         </div>
-                        <div class="d-none d-xl-block col-xl-10 col-xxl-10">Explore</div>
+                        <div class="d-none d-xl-block col-xl-10 col-xxl-10"><b>Explore</b></div>
                     </div>
                 </a>
                 <a href="#Notifications" class="list-group-item wd-list-group-item list-group-item-action">
@@ -84,8 +84,9 @@
             </div>
             <button class="btn btn-primary rounded-pill w-100 mt-2 mb-2">Tweet</button>
         </div>
-        <div class="col-10 col-sm-10 col-md-10 col-lg-7 col-xl-6 col-xxl-6">
-            <div class="row wd-search-bar pb-2 wd-row wd-border" style="align-items: center">
+
+        <div class="col-10 col-sm-10 col-md-10 col-lg-7 col-xl-6 col-xxl-6 wd-border">
+            <div class="row pb-2" style="align-items: center">
                 <div class="col-10">
                     <div class="position-relative">
                         <input class="form-control rounded-pill ps-5 wd-input" placeholder="Search Twitter"/>
@@ -93,9 +94,10 @@
                     </div>
                 </div>
                 <div class="col-2">
-                    <i class="fa fa-cog fa-2x fa-1x float-end"></i>
+                    <i class="fa fa-cog fa-2x float-end"></i>
                 </div>
             </div>
+
             <ul class="nav nav-tabs wd-tabs pb-2 nav-fill wd-middle-padding">
                 <li class="nav-item">
                     <a class="nav-link wd-nav-link active" href="for-you.html">For you</a>
@@ -121,7 +123,7 @@
                 </h3>
             </div>
 
-            <ul class="list-group wd-border-bottom wd-border">
+            <ul class="list-group wd-border-bottom ">
                 <li class="list-group-item wd-list-group-item">
                     <div class="row">
                         <div class="col-9">
@@ -205,7 +207,7 @@
                             <div class="text-secondary">
                                 Trending in Business and finance
                             </div>
-                                <div class="fw-bolder">&#35;DirectedEvolution</div>
+                            <div class="fw-bolder">&#35;DirectedEvolution</div>
                             <div class="text-secondary">
                                 172K Tweets
                             </div>
@@ -230,7 +232,7 @@
                         </div>
                         <div class="col-7">
                             <span class="fw-bolder me-1">Northeastern U.</span>
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa fa-check-circle"></i>
                             <div class="text-secondary">
                                 @Northeastern
                             </div>
@@ -245,11 +247,11 @@
                 <li class="list-group-item wd-list-group-item-gray">
                     <div class="row align-items-center">
                         <div class="col-2">
-                            <img src="../../images/matt.jpeg"width="40px" height="40px" class="rounded-circle"/>
+                            <img src="../../images/matt.jpeg" width="40px" height="40px" class="rounded-circle"/>
                         </div>
                         <div class="col-7">
                             <span class="fw-bolder me-1">Matt Wallence</span>
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa fa-check-circle"></i>
                             <div class="text-secondary">
                                 @MattWallace888
                             </div>
@@ -264,13 +266,16 @@
                 <li class="list-group-item wd-list-group-item-gray">
                     <div class="row align-items-center">
                         <div class="col-2">
-                            <img src="../../images/pointsbet.png"width="40px" height="40px" class="rounded-circle"/>
+                            <img src="../../images/pointsbet.png" width="40px" height="40px" class="rounded-circle"/>
                         </div>
                         <div class="col-7">
                             <span class="fw-bolder me-1">PointsBet Sportsbook</span>
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa fa-check-circle"></i>
                             <div class="text-secondary">
                                 @PointsBetUSA
+                            </div>
+                            <div class="text-secondary">
+                                &#8594;Promoted
                             </div>
                         </div>
                         <div class="col-3">
@@ -280,8 +285,7 @@
                         </div>
                     </div>
                 </li>
-
-                <li class="wd-list-group-item wd-list-group-item-gray" style="padding:12px;">
+                <li class="list-group-item wd-list-group-item-gray rounded wd-bottom-rounded" style="padding:12px;">
                     <a href="showmore.html" style="text-decoration: none">Show more</a>
                 </li>
 
