A4 Bootstrap v0.6: add space and format code

--- a/public/tuiter/explore/index-challenge.html
+++ b/public/tuiter/explore/index-challenge.html
@@ -60,7 +60,7 @@
                         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-2 col-xxl-2">
                             <i class="fa fa-fire fa-1x"></i>
                         </div>
-                        <div class="d-none  d-xl-block col-xl-2 col-xxl-2">TopArticles</div>
+                        <div class="d-none d-xl-block col-xl-2 col-xxl-2">Top&nbsp;Articles</div>
                     </div>
                 </a>
                 <a href="#Profile" class="list-group-item wd-list-group-item list-group-item-action">
