--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -11,7 +11,7 @@
     <div class="wd-user">@WebDev</div>
 </div>
 <div class="wd-container-post">
-    <img class="wd-avatar" src="../account_image.jpg"/>
+    <img class="wd-avatar" src="../../images/account_image.jpg"/>
     <div class="wd-post">
         <div class="wd-post-user-info">
             <div class="wd-author">Robert Zubrin</div>
@@ -66,7 +66,7 @@
 </div>
 
 <div class="wd-container-post">
-    <img class="wd-avatar" src="../account_image.jpg"/>
+    <img class="wd-avatar" src="../../images/account_image.jpg"/>
     <div class="wd-post">
         <div class="wd-post-user-info">
             <div class="wd-author">Jingting</div>
