--- a/public/tuiter/tuit.html
+++ b/public/tuiter/tuit.html
@@ -9,7 +9,8 @@
 
 <h1>Tuiter</h1>
 <h2>Tuit</h2>
-<image src="account_image.jpg" width="48px" height="48px"/><br/>
+<image src="account_image.jpg" width="48px" height="48px"/>
+<br/>
 <textarea placeholder="What's happening?"></textarea><br/>
 <select id="select-one-">
     <option selected value="EVERYONE"> Everyone can reply</option>
